Fix a regression on Windows 7 which manifested in normal windows obscuring the taskbar when a fullscreen window is around.

This bug only occurs on Windows 7 and started with my change where we use the ITaskbarList2::MarkFullscreenWindow() API
to inform the taskbar about a window being fullsceen or not. As per docs calling this API when a window goes fullscreen is enough
for the taskbar to hide itself when that window is active and to show itself when the window is inactive. It appears that the behavior
is different on Windows 7.

The fix being tried here is to mark the window as fullscreen when it is active and inactive when it is not, i.e a manual process.
This works fine on Windows 7 and 10 and was verified by QA.

BUG=758113

Change-Id: Ibdeae0be10640559594fe97980b622d64ae6ae75