ui/views/win/fullscreen_handler.cc
@@ -29,6 +29,24 @@ void FullscreenHandler::SetFullscreen(bool fullscreen) {
   SetFullscreenImpl(fullscreen);
 }
 
+void FullscreenHandler::MarkFullscreen(bool fullscreen) {
+  if (!task_bar_list_) {
+    HRESULT hr =
+        ::CoCreateInstance(CLSID_TaskbarList, NULL, CLSCTX_INPROC_SERVER,
+                           IID_PPV_ARGS(&task_bar_list_));
+    if (SUCCEEDED(hr) && FAILED(task_bar_list_->HrInit()))
+      task_bar_list_ = nullptr;
+  }
+
+  // As per MSDN marking the window as fullscreen should ensure that the
+  // taskbar is moved to the bottom of the Z-order when the fullscreen window
+  // is activated. If the window is not fullscreen, the Shell falls back to
+  // heuristics to determine how the window should be treated, which means
+  // that it could still consider the window as fullscreen. :(
+  if (task_bar_list_)
+    task_bar_list_->MarkFullscreenWindow(hwnd_, !!fullscreen);
+}
+
 gfx::Rect FullscreenHandler::GetRestoreBounds() const {
   return gfx::Rect(saved_window_info_.window_rect);
 }
@@ -86,21 +104,7 @@ void FullscreenHandler::SetFullscreenImpl(bool fullscreen) {
                  SWP_NOZORDER | SWP_NOACTIVATE | SWP_FRAMECHANGED);
   }
 
-  if (!task_bar_list_) {
-    HRESULT hr = ::CoCreateInstance(CLSID_TaskbarList, NULL,
-                                    CLSCTX_INPROC_SERVER,
-                                    IID_PPV_ARGS(&task_bar_list_));
-    if (SUCCEEDED(hr) && FAILED(task_bar_list_->HrInit()))
-      task_bar_list_ = nullptr;
-  }
-
-  // As per MSDN marking the window as fullscreen should ensure that the
-  // taskbar is moved to the bottom of the Z-order when the fullscreen window
-  // is activated. If the window is not fullscreen, the Shell falls back to
-  // heuristics to determine how the window should be treated, which means
-  // that it could still consider the window as fullscreen. :(
-  if (task_bar_list_)
-    task_bar_list_->MarkFullscreenWindow(hwnd_, !!fullscreen);
+  MarkFullscreen(fullscreen);
 }
 
 }  // namespace views
